fix: Changed app name, Odeessa

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <i data-lucide="newspaper" class="w-5 h-5"></i>
         </div>
         <div>
-          <h1 class="text-lg md:text-xl font-black tracking-tighter text-slate-900 dark:text-white leading-none">ODUU HAARAA<span class="text-emerald-600">.</span></h1>
+          <h1 class="text-lg md:text-xl font-black tracking-tighter text-slate-900 dark:text-white leading-none">ODEESSA<span class="text-emerald-600">.</span></h1>
           <p class="hidden xs:block text-[9px] md:text-[10px] uppercase tracking-widest text-slate-500 dark:text-slate-400 font-medium">Oromo Info</p>
         </div>
       </div>
@@ -201,7 +201,7 @@
   <footer class="bg-white dark:bg-slate-900 border-t border-slate-200 dark:border-slate-800 mt-auto transition-colors duration-300">
     <div class="max-w-7xl mx-auto px-4 py-8 flex flex-col md:flex-row justify-between items-center gap-4 text-center md:text-left">
       <div class="flex items-center gap-2">
-         <span class="font-black tracking-tighter text-slate-900 dark:text-white">ODUU HAARAA<span class="text-emerald-600">.</span></span>
+         <span class="font-black tracking-tighter text-slate-900 dark:text-white">ODEESSA<span class="text-emerald-600">.</span></span>
       </div>
       <p class="text-slate-400 dark:text-slate-500 text-xs md:text-sm">© 2026 Oromo Information Network. Built for Community.</p>
     </div>
