--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2537/2537926.png">
 
-  <title>ODUU — Oromo Information Network</title>
+  <title>ODEESSA — Oromo Information Networ</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
