--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             serif: ['Merriweather', 'serif'],
           },
           screens: {
-            'xs': '475px', // Added extra small breakpoint
+            'xs': '475px',
           }
         }
       }
@@ -131,6 +131,11 @@
           <button onclick="filterSource('BBC Afaan Oromoo')" class="filter-btn flex-shrink-0 px-4 py-1.5 text-sm font-medium rounded-full border border-slate-200 dark:border-slate-700 whitespace-nowrap bg-white dark:bg-slate-800" data-source="BBC Afaan Oromoo">BBC</button>
           <button onclick="filterSource('OBN')" class="filter-btn flex-shrink-0 px-4 py-1.5 text-sm font-medium rounded-full border border-slate-200 dark:border-slate-700 whitespace-nowrap bg-white dark:bg-slate-800" data-source="OBN">OBN</button>
           <button onclick="filterSource('FNN Media')" class="filter-btn flex-shrink-0 px-4 py-1.5 text-sm font-medium rounded-full border border-slate-200 dark:border-slate-700 whitespace-nowrap bg-white dark:bg-slate-800" data-source="FNN Media">FNN</button>
+          
+          <!-- NEW SAVED BUTTON -->
+          <button onclick="toggleBookmarkView()" id="btn-saved" class="filter-btn flex-shrink-0 px-4 py-1.5 text-sm font-medium rounded-full border border-slate-200 dark:border-slate-700 whitespace-nowrap bg-white dark:bg-slate-800 flex items-center gap-2">
+            <i data-lucide="bookmark" class="w-3 h-3"></i> Kuuffadhe
+          </button>
           
           <div class="w-2 md:hidden flex-shrink-0"></div>
         </div>
