feat: Changed the API to the deployed one

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div>
           <h1 class="text-lg md:text-xl font-black tracking-tighter text-slate-900 dark:text-white leading-none">ODEESSA<span class="text-emerald-600">.</span></h1>
-          <p class="hidden xs:block text-[9px] md:text-[10px] uppercase tracking-widest text-slate-500 dark:text-slate-400 font-medium">Oromo Info</p>
+          <p class="hidden xs:block text-[9px] md:text-[10px] uppercase tracking-widest text-slate-500 dark:text-slate-400 font-medium">Ethiopian Info</p>
         </div>
       </div>
 
